// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/SizeAwareImage > should load download and copy link buttons when an image is mounted 1`] = `
<div>
  <div
    class="image-loading__container class"
    style="max-width: 300px;"
  >
    <svg
      style="max-height: 200px; max-width: 300px; vertical-align: middle;"
      viewBox="0 0 300 200"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    class="file-preview__button"
    style="display: none;"
  >
    <figure
      class="image-loaded-container"
    >
      <img
        aria-label="file thumbnail photo-1533709752211-118fcaf03312"
        class="class"
        src="https://example.com/image.png"
        tabindex="0"
      />
      <span
        class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image"
      >
        <button
          aria-label="Copy link"
          class="style--none size-aware-image__copy_link"
        >
          <svg
            class="style--none"
            fill="currentColor"
            height="20"
            version="1.1"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
            />
          </svg>
        </button>
        <a
          aria-label="Download"
          class="style--none size-aware-image__download"
          download=""
          href="https://example.com/image.png"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            class="style--none"
            fill="currentColor"
            height="20"
            version="1.1"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
            />
          </svg>
        </a>
      </span>
    </figure>
  </div>
</div>
`;

exports[`components/SizeAwareImage > should match snapshot when handleSmallImageContainer prop is passed 1`] = `
<div>
  <div
    class="image-loading__container class"
    style="max-width: 300px;"
  >
    <svg
      style="max-height: 200px; max-width: 300px; vertical-align: middle;"
      viewBox="0 0 300 200"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    class="file-preview__button"
    style="display: none;"
  >
    <figure
      class="image-loaded-container"
    >
      <img
        aria-label="file thumbnail photo-1533709752211-118fcaf03312"
        class="class"
        src="https://example.com/image.png"
        tabindex="0"
      />
      <span
        class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image"
      >
        <button
          aria-label="Copy link"
          class="style--none size-aware-image__copy_link"
        >
          <svg
            class="style--none"
            fill="currentColor"
            height="20"
            version="1.1"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
            />
          </svg>
        </button>
        <a
          aria-label="Download"
          class="style--none size-aware-image__download"
          download=""
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            class="style--none"
            fill="currentColor"
            height="20"
            version="1.1"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
            />
          </svg>
        </a>
      </span>
    </figure>
  </div>
</div>
`;

exports[`components/SizeAwareImage > should render a placeholder and has loader when showLoader is true 1`] = `
<div>
  <div
    class="image-loading__container class"
    style="max-width: 300px;"
  >
    <div
      style="position: absolute; top: 50%; transform: translate(-50%, -50%); left: 50%;"
    >
      <div
        class="file__image-loading"
      >
        <span
          class="LoadingSpinner"
          data-testid="loadingSpinner"
          id="loadingSpinner"
        >
          <span
            class="fa fa-spinner fa-fw fa-pulse spinner"
            title="Loading Icon"
          />
        </span>
        <span
          class="loader-percent"
        />
      </div>
    </div>
    <svg
      style="max-height: 200px; max-width: 300px; vertical-align: middle;"
      viewBox="0 0 300 200"
      xmlns="http://www.w3.org/2000/svg"
    />
  </div>
  <div
    class="file-preview__button"
    style="display: none;"
  >
    <figure
      class="image-loaded-container"
    >
      <img
        aria-label="file thumbnail photo-1533709752211-118fcaf03312"
        class="class"
        src="https://example.com/image.png"
        tabindex="0"
      />
      <span
        class="image-preview-utility-buttons-container image-preview-utility-buttons-container--small-image"
      >
        <button
          aria-label="Copy link"
          class="style--none size-aware-image__copy_link"
        >
          <svg
            class="style--none"
            fill="currentColor"
            height="20"
            version="1.1"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.59,13.41C11,13.8 11,14.44 10.59,14.83C10.2,15.22 9.56,15.22 9.17,14.83C7.22,12.88 7.22,9.71 9.17,7.76V7.76L12.71,4.22C14.66,2.27 17.83,2.27 19.78,4.22C21.73,6.17 21.73,9.34 19.78,11.29L18.29,12.78C18.3,11.96 18.17,11.14 17.89,10.36L18.36,9.88C19.54,8.71 19.54,6.81 18.36,5.64C17.19,4.46 15.29,4.46 14.12,5.64L10.59,9.17C9.41,10.34 9.41,12.24 10.59,13.41M13.41,9.17C13.8,8.78 14.44,8.78 14.83,9.17C16.78,11.12 16.78,14.29 14.83,16.24V16.24L11.29,19.78C9.34,21.73 6.17,21.73 4.22,19.78C2.27,17.83 2.27,14.66 4.22,12.71L5.71,11.22C5.7,12.04 5.83,12.86 6.11,13.65L5.64,14.12C4.46,15.29 4.46,17.19 5.64,18.36C6.81,19.54 8.71,19.54 9.88,18.36L13.41,14.83C14.59,13.66 14.59,11.76 13.41,10.59C13,10.2 13,9.56 13.41,9.17Z"
            />
          </svg>
        </button>
        <a
          aria-label="Download"
          class="style--none size-aware-image__download"
          download=""
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            class="style--none"
            fill="currentColor"
            height="20"
            version="1.1"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19,18H5v2h14V18z M11,2h2v10.2l4.5-4.5l1.4,1.4L12,16L5.1,9.1l1.4-1.4l4.5,4.5V2z"
            />
          </svg>
        </a>
      </span>
    </figure>
  </div>
</div>
`;
